# mp3-wav

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: cli.py  config.py
src/domain/: models.py
src/infrastructure/: ffmpeg_adapter.py  filesystem.py  logging.py
src/services/: converter_service.py  discovery_service.py
tests/: test_converter_service.py  test_discovery_service.py  test_ffmpeg_adapter.py  test_filesystem.py
