[project]
name = "mp3-wav"
version = "1.0.0"
description = "Production-ready CLI tool for converting MP3 files to high-quality WAV using FFmpeg"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Alisher Akhmedov" },
]
dependencies = [
    "typer[all]>=0.9.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.4.0",
]
